[package]
name = "os-in-rust"
version = "0.1.0"
edition = "2021"

[dependencies]


[workspace]
members = ["mbr", "loader", "common", "tests", "loader2", "kernel", "user", "rrt"]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
os_in_rust_common = { version = "0.1.0", path = "common"}
kernel = { version = "0.1.0", path = "kernel"}
user = { version = "0.1.0", path = "user"}
rrt = { version = "0.1.0", path = "rrt"}
volatile = "0.2.6"
